--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       <h2>Images and Logo</h2>
       <p>Here are some images of OpenUtau Solar:</p>
       <div class="gallery">
-        <img src="https://raw.githubusercontent.com/Pandinhaa11/OpenUtauSolar/main/assets/logo_solar.png" alt="OpenUtau Solar Logo" />
-        <img src="https://raw.githubusercontent.com/Pandinhaa11/OpenUtauSolar/main/assets/screenshot1.png" alt="Screenshot 1" />
-        <img src="https://raw.githubusercontent.com/Pandinhaa11/OpenUtauSolar/main/assets/screenshot2.png" alt="Screenshot 2" />
+        <img src="./OpenUtau/Assets/open-utau.ico" alt="OpenUtau Solar Logo" />
+        <img src="./OpenUtau/Assets/logotype-w.png" alt="White render" />
+        <img src="./OpenUtau/Assets/logotype.png" alt="Render" />
       </div>
     </section>
 
