--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
   </main>
 
   <footer>
+      <a href="https://www.digits.net" target="_blank">
+    <img src="https://counter.digits.net/?counter={06e6caa4-1b4a-d0e4-6985-8a0705475a0b}&template=simple" 
+     alt="Hit Counter by Digits" border="0"  />
+  </a>
     <p>© 2025 Solar Project. All rights reserved.</p>
   </footer>
 </body>
